--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	    <footer>
 		    press w to accelerate<br>
 		    press a or d to rotate<br>
-		    press h to hyperspace
+		    press h to hyperspace<br>
+		    press b to shoot bullets
 	    </footer>
 	</body>
 </html>
